NS-229 - added key storage endpoints
